@@ -1,4 +1,5 @@
 3.6
+ * Display sstable count per level according to repair status on nodetool tablestats (CASSANDRA-11370)
  * Stress should exit with non-zero status after failure (CASSANDRA-10340)
  * Add client to cqlsh SHOW_SESSION (CASSANDRA-8958)
  * Fix nodetool tablestats keyspace level metrics (CASSANDRA-11226)
